// Hide console.log
global.console = {
  log: jest.fn(),
  // Keep native behaviour for other methods
  error: console.error,
  warn: console.warn,
  info: console.info,
  debug: console.debug,
};

const supertest = require('supertest');
const jwt = require('jwt-simple');

// Include the app
const app = require('./app.js');

// Endpoint prefix
const prefix = '/adminmate/api';

// Generate the admin token
const adminToken = jwt.encode({
  exp_date: Date.now() + 1000
}, 'authkey_secret');

// Before all
beforeAll(done => {
  done();
});

// Actions
describe('Testing GET /api/models/actions', () => {
  it('should return a 403 http response', async () => {
    // Make request
    const response = await supertest(app)
      .get(prefix + '/models/actions');

    // Check response
    expect(response.status).toBe(403);
    expect(response.body.code).toBe('not_authorized');
  });

  it('should return a 200 http response', async () => {
    // Make request
    const response = await supertest(app)
      .get(prefix + '/models/actions')
      .set('x-access-token', adminToken);

    // Check response
    expect(response.status).toBe(200);
    expect(response.body).toMatchSnapshot();
  });
});

// Actions
describe('Testing GET /api/models/:model/actions', () => {
  it('should return a 403 http response', async () => {
    // Make request
    const response = await supertest(app)
      .get(prefix + '/models/users/actions');

    // Check response
    expect(response.status).toBe(403);
    expect(response.body.code).toBe('not_authorized');
  });

  it('should return a 403 http response', async () => {
    // Make request
    const response = await supertest(app)
      .get(prefix + '/models/users/actions')
      .set('x-access-token', adminToken)
      .query({ ids: [], target: '' })

    // Check response
    expect(response.status).toBe(403);
    expect(response.body.message).toBe('Invalid request');
  });

  it('should return a 200 http response for users', async () => {
    // Make request
    const response = await supertest(app)
      .get(prefix + '/models/users/actions')
      .set('x-access-token', adminToken)
      .query({
        ids: '9',
        target: 'item'
      });

    // Check response
    expect(response.status).toBe(200);
    expect(response.body).toMatchSnapshot();
  });

  it('should return a 200 http response for cars', async () => {
    // Make request
    const response = await supertest(app)
      .get(prefix + '/models/cars/actions')
      .set('x-access-token', adminToken)
      .query({
        ids: '5cd5308e695db945d3cc81c5,5cd5308e695db945d3cc81c6,5cd5308e695db945d3cc81c7',
        target: 'bulk'
      });

    // Check response
    expect(response.status).toBe(200);
    expect(response.body).toMatchSnapshot();
  });

  it('should return a 200 http response for cars-bulk', async () => {
    // Make request
    const response = await supertest(app)
      .get(prefix + '/models/cars/actions')
      .set('x-access-token', adminToken)
      .query({
        ids: '5cd5308e695db945d3cc81c6',
        target: 'bulk'
      });

    // Check response
    expect(response.status).toBe(200);
    expect(response.body).toMatchSnapshot();
  });

  it('should return a 200 http response for cars-item', async () => {
    // Make request
    const response = await supertest(app)
      .get(prefix + '/models/cars/actions')
      .set('x-access-token', adminToken)
      .query({
        ids: '5cd5308e695db945d3cc81c6',
        target: 'item'
      });

    // Check response
    expect(response.status).toBe(200);
    expect(response.body).toMatchSnapshot();
  });
});

// After all
afterAll(done => {
  done();
})